tests/fail/test_type_error_02.tds
integer main(){
    bool y;
    y = true && 5;
    return 0;
}